<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.arr.simple.fragment.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/balances"
        android:name="com.arr.simple.fragment.balances.BalanceFragment"
        android:label="@string/title_balances"
        tools:layout="@layout/fragment_balances" />

    <fragment
        android:id="@+id/shop"
        android:name="com.arr.simple.fragment.datos.DatosFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_compras" />


    <fragment
        android:id="@+id/operations"
        android:name="com.arr.simple.fragment.operaciones.OpFragment"
        android:label="@string/title_operaciones"
        tools:layout="@layout/fragment_operaciones" />

    <fragment
        android:id="@+id/scanner"
        android:name="com.arr.simple.fragment.home.ScannerFragment"
        android:label="Scanner QR"
        tools:layout="@layout/fragment_scanner" />

</navigation>
