<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/coordinator">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
        android:id="@+id/appbar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fillViewport="true"
        android:id="@+id/nested_scroll_view">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ImageView
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:src="@mipmap/ic_launcher"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:id="@+id/logo" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/logo"
                android:textAppearance="?textAppearanceHeadlineMedium"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/name_app"
                android:text="@string/app_name" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/name_app"
                android:textAppearance="?textAppearanceBodySmall"
                android:layout_centerHorizontal="true"
                android:id="@+id/version" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/version"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:textAppearance="?textAppearanceBodyMedium"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:id="@+id/subtitle"
                android:text="@string/description_app" />

            <ImageView
                android:layout_height="16dp"
                android:layout_width="16dp"
                android:src="@drawable/ic_developer"
                android:layout_above="@id/collab"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textAppearance="?textAppearanceBodySmall"
                android:layout_above="@id/icon_dev"
                android:layout_centerHorizontal="true"
                android:id="@+id/collab"
                android:text="@string/desarrollo" />

            <ImageView
                android:layout_height="16dp"
                android:layout_width="16dp"
                android:src="@drawable/ic_collaborate"
                android:layout_above="@id/dev"
                android:layout_centerHorizontal="true"
                android:id="@+id/icon_dev" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textAppearance="?textAppearanceBodySmall"
                android:layout_above="@id/contact"
                android:layout_centerHorizontal="true"
                android:id="@+id/dev"
                android:text="@string/colaboradores" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:id="@+id/contact">

                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:icon="@drawable/ic_whatsapp"
                    android:layout_margin="5dp"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:id="@+id/whatsapp" />

                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:icon="@drawable/ic_email_24dp"
                    android:layout_margin="5dp"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:id="@+id/correo" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
