<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_saldo"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_margin="4dp"
            app:cardElevation="2dp"
            app:strokeWidth="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_saldo_filled_24dp"
                    android:background="@drawable/background_icons"
                    android:padding="8dp"
                    android:tint="?attr/colorOnSurface" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAppearance="?textAppearanceBodyMedium"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_saldo" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_datos"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_margin="4dp"
            app:cardElevation="2dp"
            app:strokeWidth="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_datos_filled_24dp"
                    android:background="@drawable/background_icons"
                    android:padding="8dp"
                    android:tint="?attr/colorOnSurface" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAppearance="?textAppearanceBodyMedium"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_datos" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_bono"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_margin="4dp"
            app:cardElevation="2dp"
            app:strokeWidth="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_bono_filled_24dp"
                    android:background="@drawable/background_icons"
                    android:padding="8dp"
                    android:tint="?attr/colorOnSurface" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAppearance="?textAppearanceBodyMedium"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_bono" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_amigo"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_margin="4dp"
            app:cardElevation="2dp"
            app:strokeWidth="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_amigo_filled_24dp"
                    android:background="@drawable/background_icons"
                    android:padding="8dp"
                    android:tint="?attr/colorOnSurface" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAppearance="?textAppearanceBodyMedium"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_amigo" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>
